@@ -23,7 +23,7 @@ import org.folio.rest.jaxrs.model.Location;
 import org.folio.rest.jaxrs.model.ProductId;
 import org.folio.rest.jaxrs.model.Title;
 import org.folio.rest.tools.utils.TenantTool;
-import org.folio.service.caches.ConfigurationEntriesCache;
+import org.folio.service.caches.CommonSettingsCache;
 import org.folio.service.caches.InventoryCache;
 import org.folio.service.consortium.ConsortiumConfigurationService;
 import org.folio.service.consortium.SharingInstanceService;
@@ -32,7 +32,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.CompletionException;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.Collections.singletonList;
@@ -54,6 +53,7 @@ import static org.folio.service.inventory.InventoryUtils.INSTANCE_RECORDS_BY_ID_
 import static org.folio.service.inventory.InventoryUtils.INVENTORY_LOOKUP_ENDPOINTS;
 
 public class InventoryInstanceManager {
+
   private static final Logger logger = LogManager.getLogger(InventoryInstanceManager.class);
 
   public static final String ID = "id";
@@ -78,21 +78,69 @@ public class InventoryInstanceManager {
   public static final String INSTANCE_DISCOVERY_SUPPRESS = "discoverySuppress";
 
   private final RestClient restClient;
-  private final ConfigurationEntriesCache configurationEntriesCache;
+  private final CommonSettingsCache commonSettingsCache;
   private final InventoryCache inventoryCache;
   private final SharingInstanceService sharingInstanceService;
   private final ConsortiumConfigurationService consortiumConfigurationService;
 
   public InventoryInstanceManager(RestClient restClient,
-                                  ConfigurationEntriesCache configurationEntriesCache,
+                                  CommonSettingsCache commonSettingsCache,
                                   InventoryCache inventoryCache,
                                   SharingInstanceService sharingInstanceService,
                                   ConsortiumConfigurationService consortiumConfigurationService) {
     this.restClient = restClient;
-    this.configurationEntriesCache = configurationEntriesCache;
+    this.commonSettingsCache = commonSettingsCache;
     this.inventoryCache = inventoryCache;
     this.sharingInstanceService = sharingInstanceService;
     this.consortiumConfigurationService = consortiumConfigurationService;
+  }
+
+  public Future<SharingInstance> createShadowInstanceIfNeeded(String instanceId, RequestContext requestContext) {
+    return consortiumConfigurationService.getConsortiumConfiguration(requestContext)
+      .compose(consortiumConfiguration -> createShadowInstanceIfNeeded(instanceId, consortiumConfiguration.orElse(null), requestContext));
+  }
+
+  public Future<String> getOrCreateInstanceRecord(Title title, boolean isInstanceMatchingDisabled,
+                                                  boolean suppressDiscovery, RequestContext requestContext) {
+    logger.debug("InventoryInstanceManager.getOrCreateInstanceRecord title.id={}", title.getId());
+    if (CollectionUtils.isEmpty(title.getProductIds()) || isInstanceMatchingDisabled) {
+      return createInstanceRecord(title, suppressDiscovery, requestContext);
+    }
+
+    return searchInstancesByProducts(title.getProductIds(), requestContext)
+      .compose(instances -> {
+        if (!instances.getJsonArray(INSTANCES).isEmpty()) {
+          String instanceId = getFirstObjectFromResponse(instances, INSTANCES).getString(ID);
+          return Future.succeededFuture(instanceId);
+        }
+        return createInstanceRecord(title, suppressDiscovery, requestContext);
+      });
+  }
+
+  public Future<PoLine> openOrderHandleInstance(PoLine poLine, boolean isInstanceMatchingDisabled, RequestContext requestContext) {
+    logger.debug("InventoryInstanceManager.openOrderHandleInstance");
+    return consortiumConfigurationService.getConsortiumConfiguration(requestContext)
+      .compose(configuration ->
+        getOrCreateInstanceRecordForPoLine(poLine, isInstanceMatchingDisabled, configuration.orElse(null), requestContext))
+      .map(poLine::withInstanceId);
+  }
+
+  public Future<String> createInstanceRecord(Title title, boolean suppressDiscovery, RequestContext requestContext) {
+    logger.debug("InventoryInstanceManager.createInstanceRecord title.id={}", title.getId());
+    JsonObject lookupObj = new JsonObject();
+    Future<Void> instanceTypeFuture = InventoryUtils.getEntryId(commonSettingsCache, inventoryCache, INSTANCE_TYPES, MISSING_INSTANCE_TYPE, requestContext)
+      .onSuccess(lookupObj::mergeIn)
+      .mapEmpty();
+
+    Future<Void> statusFuture = InventoryUtils.getEntryId(commonSettingsCache, inventoryCache, INSTANCE_STATUSES, MISSING_INSTANCE_STATUS, requestContext)
+      .onSuccess(lookupObj::mergeIn)
+      .mapEmpty();
+
+    Future<Void> contributorNameTypeIdFuture = verifyContributorNameTypesExist(title.getContributors(), requestContext);
+
+    return GenericCompositeFuture.join(List.of(instanceTypeFuture, statusFuture, contributorNameTypeIdFuture))
+      .map(cf -> buildInstanceRecordJsonObject(title, suppressDiscovery, lookupObj))
+      .compose(instanceJson -> createInstance(instanceJson, requestContext));
   }
 
   Future<JsonObject> searchInstancesByProducts(List<ProductId> productIds, RequestContext requestContext) {
@@ -105,13 +153,13 @@ public class InventoryInstanceManager {
     return restClient.getAsJsonObject(requestEntry, requestContext);
   }
 
-  JsonObject buildInstanceRecordJsonObject(Title title, JsonObject lookupObj) {
+  JsonObject buildInstanceRecordJsonObject(Title title, boolean suppressDiscovery, JsonObject lookupObj) {
     JsonObject instance = new JsonObject();
 
     // MODORDERS-145 The Source and source code are required by schema
     instance.put(INSTANCE_SOURCE, SOURCE_FOLIO);
     instance.put(INSTANCE_TITLE, title.getTitle());
-    instance.put(INSTANCE_DISCOVERY_SUPPRESS, false);
+    instance.put(INSTANCE_DISCOVERY_SUPPRESS, suppressDiscovery);
 
     if (title.getEdition() != null) {
       instance.put(INSTANCE_EDITIONS, new JsonArray(singletonList(title.getEdition())));
@@ -133,7 +181,7 @@ public class InventoryInstanceManager {
         invContributor.put(CONTRIBUTOR_NAME_TYPE_ID, polContributor.getContributorNameTypeId());
         invContributor.put(CONTRIBUTOR_NAME, polContributor.getContributor());
         return invContributor;
-      }).collect(toList());
+      }).toList();
       instance.put(INSTANCE_CONTRIBUTORS, contributors);
     }
 
@@ -147,44 +195,79 @@ public class InventoryInstanceManager {
             identifier.put(INSTANCE_IDENTIFIER_TYPE_VALUE, pId.getProductId());
             return identifier;
           })
-          .collect(toList());
+          .toList();
       instance.put(INSTANCE_IDENTIFIERS, new JsonArray(identifiers));
     }
     return instance;
   }
 
-  Future<JsonObject> getInstanceById(String instanceId, boolean skipNotFoundException, RequestContext requestContext) {
-    RequestEntry requestEntry = new RequestEntry(INVENTORY_LOOKUP_ENDPOINTS.get(INSTANCE_RECORDS_BY_ID_ENDPOINT)).withId(instanceId);
-    return restClient.getAsJsonObject(requestEntry, skipNotFoundException, requestContext);
-  }
-
   /**
-   * Returns Id of the Instance Record corresponding to given PO line.
-   * Instance record is either retrieved from Inventory or a new one is created if no corresponding Record exists.
+   * Returns the id of the instance record corresponding to given PO line.
+   * The instance record is either retrieved from inventory or a new one is created if no corresponding record exists.
+   * If the instance is not found in the member tenant but is found in the central tenant, create shadow copies
+   * in tenants where it is missing.
    *
-   * @param poLine PO line to retrieve Instance Record Id for
-   * @return future with Instance Id
+   * @param poLine - PO line to retrieve instance record id for
+   * @param isInstanceMatchingDisabled - If true, do not look for instance in inventory, always create it if missing
+   * @param configuration - consortium configuration (null in a non-ECS environment)
+   * @return Future with instance id
    */
-  private Future<String> getInstanceRecord(PoLine poLine, boolean isInstanceMatchingDisabled, RequestContext requestContext) {
+  private Future<String> getOrCreateInstanceRecordForPoLine(PoLine poLine, boolean isInstanceMatchingDisabled,
+      ConsortiumConfiguration configuration, RequestContext requestContext) {
+    logger.debug("getOrCreateInstanceRecordForPoLine:: poLine.id={}", poLine.getId());
     if (poLine.getInstanceId() != null) {
       return Future.succeededFuture(poLine.getInstanceId());
     }
-    // proceed with new Instance Record creation if no productId is provided
+    // proceed with new instance record creation if no productId is provided
     if (!isProductIdsExist(poLine) || isInstanceMatchingDisabled) {
+      logger.debug("getOrCreateInstanceRecordForPoLine:: no productId is provided - create instance record");
       return createInstanceRecord(poLine, requestContext);
     }
-
     String query = poLine.getDetails().getProductIds().stream()
       .map(this::buildProductIdQuery)
       .collect(joining(" or "));
+    return getInstanceRecordAndShareIfNeeded(query, poLine, configuration, requestContext)
+      .compose(id -> {
+        if (id != null) {
+          return Future.succeededFuture(id);
+        }
+        logger.debug("getOrCreateInstanceRecordForPoLine:: instance not found - create it");
+        return createInstanceRecord(poLine, requestContext);
+      });
+  }
+
+  private Future<String> getInstanceRecordAndShareIfNeeded(String query, PoLine poLine,
+      ConsortiumConfiguration configuration, RequestContext requestContext) {
+    return getInstanceIdByQuery(query, requestContext)
+      .compose(instanceId1 -> {
+        if (instanceId1 != null) {
+          logger.debug("getInstanceRecordAndShareIfNeeded:: instance found in local tenant: {}", instanceId1);
+          return Future.succeededFuture(instanceId1);
+        }
+        if (configuration == null) {
+          return Future.succeededFuture(null);
+        }
+        logger.debug("getInstanceRecordAndShareIfNeeded:: instance not found - look for it in central tenant");
+        return getInstanceIdByQuery(query, createContextWithNewTenantId(requestContext, configuration.centralTenantId()))
+          .compose(instanceId2 -> {
+            if (instanceId2 == null) {
+              return Future.succeededFuture(null);
+            }
+            logger.debug("getInstanceRecordAndShareIfNeeded:: instance found in central tenant: {}", instanceId2);
+            return shareInstanceAmongTenantsIfNeeded(instanceId2, configuration, poLine.getLocations(), requestContext);
+          });
+      });
+  }
+
+  private Future<String> getInstanceIdByQuery(String query, RequestContext requestContext) {
     RequestEntry requestEntry = new RequestEntry(INVENTORY_LOOKUP_ENDPOINTS.get(INSTANCES))
       .withQuery(query).withOffset(0).withLimit(Integer.MAX_VALUE);
     return restClient.getAsJsonObject(requestEntry, requestContext)
-      .compose(instances -> {
-        if (!instances.getJsonArray(INSTANCES).isEmpty()) {
-          return Future.succeededFuture(extractId(getFirstObjectFromResponse(instances, INSTANCES)));
+      .map(instances -> {
+        if (instances.getJsonArray(INSTANCES).isEmpty()) {
+          return null;
         }
-        return createInstanceRecord(poLine, requestContext);
+        return extractId(getFirstObjectFromResponse(instances, INSTANCES));
       });
   }
 
@@ -195,13 +278,13 @@ public class InventoryInstanceManager {
    * @return id of newly created Instance Record
    */
   private Future<String> createInstanceRecord(PoLine poLine, RequestContext requestContext) {
-    logger.debug("Start processing instance record");
+    logger.debug("InventoryInstanceManager.createInstanceRecord poLine.id={}", poLine.getId());
     JsonObject lookupObj = new JsonObject();
-    Future<Void> instanceTypeFuture = InventoryUtils.getEntryId(configurationEntriesCache, inventoryCache, INSTANCE_TYPES, MISSING_INSTANCE_TYPE, requestContext)
+    Future<Void> instanceTypeFuture = InventoryUtils.getEntryId(commonSettingsCache, inventoryCache, INSTANCE_TYPES, MISSING_INSTANCE_TYPE, requestContext)
       .onSuccess(lookupObj::mergeIn)
       .mapEmpty();
 
-    Future<Void> statusFuture = InventoryUtils.getEntryId(configurationEntriesCache, inventoryCache, INSTANCE_STATUSES, MISSING_INSTANCE_STATUS, requestContext)
+    Future<Void> statusFuture = InventoryUtils.getEntryId(commonSettingsCache, inventoryCache, INSTANCE_STATUSES, MISSING_INSTANCE_STATUS, requestContext)
       .onSuccess(lookupObj::mergeIn)
       .mapEmpty();
 
@@ -212,7 +295,9 @@ public class InventoryInstanceManager {
       .compose(instanceRecJson -> {
         RequestEntry requestEntry = new RequestEntry(INVENTORY_LOOKUP_ENDPOINTS.get(INSTANCES));
         return restClient.postJsonObjectAndGetId(requestEntry, instanceRecJson, requestContext);
-      });
+      })
+      .onSuccess(id -> logger.info("createInstanceRecord:: Created instance with id {}", id))
+      .onFailure(t -> logger.error("createInstanceRecord:: Failed to create instance", t));
   }
 
   private JsonObject buildInstanceRecordJsonObject(PoLine poLine, JsonObject lookupObj) {
@@ -242,7 +327,7 @@ public class InventoryInstanceManager {
         invContributor.put(CONTRIBUTOR_NAME_TYPE_ID, polContributor.getContributorNameTypeId());
         invContributor.put(CONTRIBUTOR_NAME, polContributor.getContributor());
         return invContributor;
-      }).collect(toList());
+      }).toList();
       instance.put(INSTANCE_CONTRIBUTORS, contributors);
     }
 
@@ -257,7 +342,7 @@ public class InventoryInstanceManager {
             identifier.put(INSTANCE_IDENTIFIER_TYPE_VALUE, pId.getProductId());
             return identifier;
           })
-          .collect(toList());
+          .toList();
       instance.put(INSTANCE_IDENTIFIERS, new JsonArray(identifiers));
     }
     return instance;
@@ -268,7 +353,7 @@ public class InventoryInstanceManager {
       productId.getProductIdType(), productId.getProductId());
   }
 
-  public Future<Void> verifyContributorNameTypesExist(List<Contributor> contributors, RequestContext requestContext) {
+  private Future<Void> verifyContributorNameTypesExist(List<Contributor> contributors, RequestContext requestContext) {
     List<String> ids = contributors.stream()
       .map(contributor -> contributor.getContributorNameTypeId().toLowerCase())
       .distinct()
@@ -302,7 +387,7 @@ public class InventoryInstanceManager {
     return restClient.getAsJsonObject(requestEntry, requestContext)
       .map(entries -> entries.getJsonArray(CONTRIBUTOR_NAME_TYPES).stream()
         .map(JsonObject::mapFrom)
-        .collect(Collectors.toList())
+        .toList()
       )
       .recover(e -> {
         logger.error("The issue happened getting contributor name types", e);
@@ -310,55 +395,16 @@ public class InventoryInstanceManager {
       });
   }
 
-  public Future<String> getOrCreateInstanceRecord(Title title, boolean isInstanceMatchingDisabled, RequestContext requestContext) {
-    if (CollectionUtils.isEmpty(title.getProductIds()) || isInstanceMatchingDisabled) {
-      return createInstanceRecord(title, requestContext);
-    }
-
-    return searchInstancesByProducts(title.getProductIds(), requestContext)
-      .compose(instances -> {
-        if (!instances.getJsonArray(INSTANCES).isEmpty()) {
-          String instanceId = getFirstObjectFromResponse(instances, INSTANCES).getString(ID);
-          return Future.succeededFuture(instanceId);
-        }
-        return createInstanceRecord(title, requestContext);
-      });
-  }
-
-  public Future<String> createInstanceRecord(Title title, RequestContext requestContext) {
-    JsonObject lookupObj = new JsonObject();
-    Future<Void> instanceTypeFuture = InventoryUtils.getEntryId(configurationEntriesCache, inventoryCache, INSTANCE_TYPES, MISSING_INSTANCE_TYPE, requestContext)
-      .onSuccess(lookupObj::mergeIn)
-      .mapEmpty();
-
-    Future<Void> statusFuture = InventoryUtils.getEntryId(configurationEntriesCache, inventoryCache, INSTANCE_STATUSES, MISSING_INSTANCE_STATUS, requestContext)
-      .onSuccess(lookupObj::mergeIn)
-      .mapEmpty();
-
-    Future<Void> contributorNameTypeIdFuture = verifyContributorNameTypesExist(title.getContributors(), requestContext);
-
-    return GenericCompositeFuture.join(List.of(instanceTypeFuture, statusFuture, contributorNameTypeIdFuture))
-      .map(cf -> buildInstanceRecordJsonObject(title, lookupObj))
-      .compose(instanceJson -> createInstance(instanceJson, requestContext));
-  }
-
   private Future<String> createInstance(JsonObject instanceRecJson, RequestContext requestContext) {
     RequestEntry requestEntry = new RequestEntry(INVENTORY_LOOKUP_ENDPOINTS.get(INSTANCES));
-    return restClient.postJsonObjectAndGetId(requestEntry, instanceRecJson, requestContext);
-  }
-
-  public Future<PoLine> openOrderHandleInstance(PoLine poLine, boolean isInstanceMatchingDisabled, RequestContext requestContext) {
-    return consortiumConfigurationService.getConsortiumConfiguration(requestContext)
-      .compose(configuration ->
-        getInstanceRecord(poLine, isInstanceMatchingDisabled, requestContext)
-          .compose(instanceId -> configuration
-            .map(consortiumConfiguration -> shareInstanceAmongTenantsIfNeeded(instanceId, consortiumConfiguration, poLine.getLocations(), requestContext))
-            .orElse(Future.succeededFuture(instanceId))))
-      .map(poLine::withInstanceId);
+    return restClient.postJsonObjectAndGetId(requestEntry, instanceRecJson, requestContext)
+      .onSuccess(id -> logger.info("createInstance:: Created instance with id {}", id))
+      .onFailure(t -> logger.error("createInstance:: Failed to create instance", t));
   }
 
   private Future<String> shareInstanceAmongTenantsIfNeeded(String instanceId, ConsortiumConfiguration consortiumConfiguration,
                                                            List<Location> locations, RequestContext requestContext) {
+    logger.debug("InventoryInstanceManager.shareInstanceAmongTenantsIfNeeded");
     return getTenantIdsWithoutShadowInstances(instanceId, consortiumConfiguration, locations, requestContext)
       .map(tenantIds -> tenantIds.stream()
         .map(tenantId -> createShadowInstanceIfNeeded(instanceId, consortiumConfiguration, createContextWithNewTenantId(requestContext, tenantId)))
@@ -390,11 +436,6 @@ public class InventoryInstanceManager {
       });
   }
 
-  public Future<SharingInstance> createShadowInstanceIfNeeded(String instanceId, RequestContext requestContext) {
-    return consortiumConfigurationService.getConsortiumConfiguration(requestContext)
-      .compose(consortiumConfiguration -> createShadowInstanceIfNeeded(instanceId, consortiumConfiguration.orElse(null), requestContext));
-  }
-
   private Future<SharingInstance> createShadowInstanceIfNeeded(String instanceId, ConsortiumConfiguration consortiumConfiguration, RequestContext requestContext) {
     if (consortiumConfiguration == null) {
       logger.debug("createShadowInstanceIfNeeded:: Skipping creating shadow instance for non ECS mode.");
@@ -406,7 +447,7 @@ public class InventoryInstanceManager {
     }
     var targetTenant = TenantTool.tenantId(requestContext.getHeaders());
     logger.info("createShadowInstanceIfNeeded:: Getting instance: {} from tenant: {}", instanceId, targetTenant);
-    return getInstanceById(instanceId, true, requestContext)
+    return getInstanceById(instanceId, requestContext)
       .compose(instance -> {
         if (Objects.nonNull(instance) && !instance.isEmpty()) {
           logger.info("createShadowInstanceIfNeeded:: Shadow instance {} already exists in tenant: {}, skipping...", instanceId, targetTenant);
@@ -417,4 +458,8 @@ public class InventoryInstanceManager {
       });
   }
 
+  private Future<JsonObject> getInstanceById(String instanceId, RequestContext requestContext) {
+    RequestEntry requestEntry = new RequestEntry(INVENTORY_LOOKUP_ENDPOINTS.get(INSTANCE_RECORDS_BY_ID_ENDPOINT)).withId(instanceId);
+    return restClient.getAsJsonObject(requestEntry, true, requestContext);
+  }
 }
